# scope

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yaml
scope/: __init__.py  columns.py  formats.py  reader.py  writer.py
scope_viewer/: __main__.py  config.py  filesystems.py  package-lock.json  server.py
scope_viewer/src/: Card.vue  CardFloat.vue  CardImage.vue  CardText.vue  InputText.vue  chartZoomPlugin.js  store.js
tests/: test_float.py  test_image.py  test_video.py  utils.py
viewer/: README.md  __main__.py  config.py  filesystems.py  index.html  package.json  server.py  vite.config.js
viewer/client/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
viewer/client/src/: App.vue  Card.vue  CardFloat.vue  CardText.vue  CardVideo.vue  FloatCard.vue  HelloWorld.vue  InputText.vue  Options.vue  Selector.vue  VideoCard.vue  api.js  chartZoomPlugin.js  keynav.js  main.js  storage.js  store.js
viewer/client/src/assets/: base.css  main.css
viewer/server/: filesystems.py  requirements.txt  server.py
viewer/src/: App.vue  Card.vue  CardFloat.vue  CardVideo.vue  Options.vue  Selector.vue  cache.js  chartZoomPlugin.js  keynav.js  storage.js
viewer/src/assets/: main.css
