[project]
name = "scope"
version = "0.7.0"
requires-python = ">=3.10"
description = "Metrics logging and analysis"
readme="README.md"
license="MIT"
authors = [{name = "Danijar Hafner"}]
maintainers = [{name = "Danijar Hafner", email = "mail@danijar.com"}]
urls = {Homepage = "http://github.com/danijar/scope"}
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "av",
  "elements>=3.16.6",
  "fastapi",
  "mediapy",
  "numpy",
  "orjson",
  "pillow",
  "uvicorn[standard]",
]

[project.scripts]
scope = "scope_viewer.__main__:main"

[dependency-groups]
dev = [
  "ipdb",
  "pytest",
  "ruff",
  "taskipy",
  "twine",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."
module-name = ["scope", "scope_viewer"]

[tool.taskipy.tasks]
build = "cd scope_viewer && npm install && npm run build && cd .. && uv build"
check = "ruff check"
format = "ruff format"

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
